--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "start:main": "cross-env NODE_ENV=development electronmon -r ts-node/register/transpile-only .",
     "start:preload": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.preload.dev.ts",
     "start:renderer": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack serve --config ./.erb/configs/webpack.config.renderer.dev.ts",
-    "test": "jest"
+    "test": "jest",
+    "dist": "electron-builder"
   },
   "browserslist": [],
   "prettier": {
@@ -80,13 +81,18 @@
     }
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.14",
     "@phosphor-icons/react": "^2.0.15",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^6.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "styled-components": "^6.1.8",
+    "typescript-plugin-css-modules": "^5.1.0"
   },
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
@@ -156,8 +162,8 @@
     "webpack-merge": "^5.9.0"
   },
   "build": {
-    "productName": "ElectronReact",
-    "appId": "org.erb.ElectronReact",
+    "productName": "Include App",
+    "appId": "org.erb.IncludeApp",
     "asar": true,
     "asarUnpack": "**\\*.{node,dll}",
     "files": [
@@ -197,7 +203,8 @@
     "win": {
       "target": [
         "nsis"
-      ]
+      ],
+      "icon": "./public/icon.ico"
     },
     "linux": {
       "target": [
