--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "electron-updater": "^6.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-monaco-editor": "^0.55.0",
     "react-router-dom": "^6.16.0",
     "styled-components": "^6.1.8",
     "typescript-plugin-css-modules": "^5.1.0"
