--- a/package.json
+++ b/package.json
@@ -84,9 +84,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/material": "^5.15.14",
     "@mui/x-date-pickers": "^7.3.2",
     "@phosphor-icons/react": "^2.0.15",
+    "@uiw/react-textarea-code-editor": "^3.0.2",
     "axios": "^1.6.8",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
